checkers/tests/igj/Fields.out
Fields.java:13: error: (assignment.type.incompatible)
Fields.java:14: error: (assignment.type.incompatible)
Fields.java:38: error: (argument.type.incompatible)
Fields.java:39: error: (argument.type.incompatible)
Fields.java:40: error: (argument.type.incompatible)
Fields.java:47: error: (argument.type.incompatible)
Fields.java:48: error: (argument.type.incompatible)
Fields.java:49: error: (argument.type.incompatible)
Fields.java:52: error: (argument.type.incompatible)
Fields.java:53: error: (argument.type.incompatible)
Fields.java:54: error: (argument.type.incompatible)
Fields.java:56: error: (argument.type.incompatible)
Fields.java:57: error: (argument.type.incompatible)
Fields.java:58: error: (argument.type.incompatible)
Fields.java:68: error: (argument.type.incompatible)
Fields.java:69: error: (argument.type.incompatible)
Fields.java:70: error: (argument.type.incompatible)
Fields.java:77: error: (argument.type.incompatible)
Fields.java:78: error: (argument.type.incompatible)
Fields.java:79: error: (argument.type.incompatible)
Fields.java:86: error: (argument.type.incompatible)
Fields.java:87: error: (argument.type.incompatible)
Fields.java:88: error: (argument.type.incompatible)
Fields.java:90: error: (argument.type.incompatible)
Fields.java:91: error: (argument.type.incompatible)
Fields.java:92: error: (argument.type.incompatible)
Fields.java:102: error: (argument.type.incompatible)
Fields.java:103: error: (argument.type.incompatible)
Fields.java:104: error: (argument.type.incompatible)
Fields.java:106: error: (argument.type.incompatible)
Fields.java:107: error: (argument.type.incompatible)
Fields.java:108: error: (argument.type.incompatible)
Fields.java:111: error: (argument.type.incompatible)
Fields.java:112: error: (argument.type.incompatible)
Fields.java:113: error: (argument.type.incompatible)
Fields.java:115: error: (argument.type.incompatible)
Fields.java:116: error: (argument.type.incompatible)
Fields.java:117: error: (argument.type.incompatible)
Fields.java:120: error: (argument.type.incompatible)
Fields.java:121: error: (argument.type.incompatible)
Fields.java:122: error: (argument.type.incompatible)
Fields.java:124: error: (argument.type.incompatible)
Fields.java:125: error: (argument.type.incompatible)
Fields.java:126: error: (argument.type.incompatible)
Fields.java:136: error: (argument.type.incompatible)
Fields.java:137: error: (argument.type.incompatible)
Fields.java:138: error: (argument.type.incompatible)
Fields.java:140: error: (argument.type.incompatible)
Fields.java:141: error: (argument.type.incompatible)
Fields.java:142: error: (argument.type.incompatible)
Fields.java:145: error: (argument.type.incompatible)
Fields.java:146: error: (argument.type.incompatible)
Fields.java:147: error: (argument.type.incompatible)
Fields.java:149: error: (argument.type.incompatible)
Fields.java:150: error: (argument.type.incompatible)
Fields.java:151: error: (argument.type.incompatible)
Fields.java:154: error: (argument.type.incompatible)
Fields.java:155: error: (argument.type.incompatible)
Fields.java:156: error: (argument.type.incompatible)
Fields.java:158: error: (argument.type.incompatible)
Fields.java:159: error: (argument.type.incompatible)
Fields.java:160: error: (argument.type.incompatible)
Fields.java:173: error: (argument.type.incompatible)
Fields.java:174: error: (argument.type.incompatible)
Fields.java:180: error: (argument.type.incompatible)
Fields.java:181: error: (argument.type.incompatible)
Fields.java:184: error: (argument.type.incompatible)
Fields.java:185: error: (argument.type.incompatible)
Fields.java:187: error: (argument.type.incompatible)
Fields.java:188: error: (argument.type.incompatible)
Fields.java:198: error: (argument.type.incompatible)
Fields.java:199: error: (argument.type.incompatible)
Fields.java:205: error: (argument.type.incompatible)
Fields.java:206: error: (argument.type.incompatible)
Fields.java:212: error: (argument.type.incompatible)
Fields.java:213: error: (argument.type.incompatible)
Fields.java:215: error: (argument.type.incompatible)
Fields.java:216: error: (argument.type.incompatible)
Fields.java:230: error: (argument.type.incompatible)
Fields.java:231: error: (argument.type.incompatible)
Fields.java:237: error: (argument.type.incompatible)
Fields.java:238: error: (argument.type.incompatible)
Fields.java:241: error: (argument.type.incompatible)
Fields.java:242: error: (argument.type.incompatible)
Fields.java:244: error: (argument.type.incompatible)
Fields.java:245: error: (argument.type.incompatible)
Fields.java:257: error: (argument.type.incompatible)
Fields.java:258: error: (argument.type.incompatible)
Fields.java:264: error: (argument.type.incompatible)
Fields.java:265: error: (argument.type.incompatible)
Fields.java:271: error: (argument.type.incompatible)
Fields.java:272: error: (argument.type.incompatible)
Fields.java:274: error: (argument.type.incompatible)
Fields.java:275: error: (argument.type.incompatible)
